# schrankerl-refill-planner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
addons/schrankerl_refill_planner/: __init__.py  __manifest__.py  mock_adapter.py  planner.py
addons/schrankerl_refill_planner/data/: cron.xml
addons/schrankerl_refill_planner/demo/: demo.xml
addons/schrankerl_refill_planner/models/: __init__.py  events.py  fridge.py  integration.py  planning.py
addons/schrankerl_refill_planner/security/: ir.model.access.csv
addons/schrankerl_refill_planner/views/: fridge_views.xml  integration_run_views.xml  inventory_snapshot_views.xml  menu.xml  refill_plan_views.xml  sale_event_views.xml
scripts/: render-start.sh
tests/: test_planner.py
